# clog

./: .gitignore  CMakeLists.txt  README.md  project.yml  uninstall.sh
clog/: logging.c  logging.h  types.h
cmake/: clogConfig.cmake.in  loggyConfig.cmake.in
examples/: CMakeLists.txt  simple.c  stdout.c
include/: logging.h  types.h
loggy/: loggy.c  loggy.h
source/: logging.c
tests/: test_compatibility.c  test_core.c
